--- a/i_talks.html
+++ b/i_talks.html
@@ -52,6 +52,11 @@
 Emerging opportunities for statistics and data sciences: data and information integration Recent works and perspectives from academia, industry, and regulatory agencies, Banff International Research Station for Mathematical Innovation and Discovery (BIRS), Summer 2024 (invited)
 </p>
 
+
+<p>
+The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA), Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
+</p>
+
 <p>
 <a href="https://icml.cc/Conferences/2023/Dates">ICML 2023</a>, Honolulu, Oahu, Hawaii, USA, July 23-29, 2023
 </p>
