--- a/i_talks.html
+++ b/i_talks.html
@@ -75,7 +75,7 @@ The 14th International Conference of Numerical Optimization and Numerical Linear
 
 
 <p>
-DistributedML Seminar, Virtual, Qualcomm AI Research, 2023
+DistributedML Seminar, Virtual, Qualcomm AI Research, April 23, 2023 @ 9am PT
 </p>
 
 
@@ -85,12 +85,15 @@ DistributedML Seminar, Virtual, Qualcomm AI Research, 2023
 </p>
 !-->
 
-<h1>2022 Talks</h1>
+<h1>2023 Talks</h1>
 
 <p>
 [222]
 <a href="https://events.rice.edu/#!view/event/event_id/340417">CMOR Special Lecture</a>, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma) [<a href="talks/TALK-2023-01-20-Rice.pdf">slides</a>]
 </p>
+
+
+<h1>2022 Talks</h1>
 
 <p>
 [221]
