--- a/i_team.html
+++ b/i_team.html
@@ -156,8 +156,15 @@
           <h2>Research Interns</h2>
 
           <ul>
+  
+<!--    <li><a href="">Marta Pozzi</a> (9/2023-present), from University of Pavia </li>          
+-->
+          
+<!--    <li><a href="">Babis Kostopoulos</a> (5/2023-present), from National Technical University of Athens </li>          
+-->
 
             <li><a href="">Dinis Seward</a> (1/2023-present), from Oxford University </li>
+            
             <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (8/2022-2/2023), from ShanghaiTech University </li>
 
           </ul>
