talk in Armenia

--- a/i_talks.html
+++ b/i_talks.html
@@ -52,7 +52,6 @@
 Emerging opportunities for statistics and data sciences: data and information integration Recent works and perspectives from academia, industry, and regulatory agencies, Banff International Research Station for Mathematical Innovation and Discovery (BIRS), Summer 2024 (invited)
 </p>
 
-
 <p>
 The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA), Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
 </p>
@@ -66,6 +65,10 @@ The 14th International Conference of Numerical Optimization and Numerical Linear
 </p>
 
 <p>
+<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a>, Armenia, July 2-8, 2023 (plenary)
+</p>
+
+<p>
 <a href="https://iclr.cc/Conferences/2023">ICLR 2023</a>, Kigali, Rwanda, May 1-5, 2023
 </p>
 
@@ -73,11 +76,9 @@ The 14th International Conference of Numerical Optimization and Numerical Linear
 <a href="http://aistats.org/aistats2023/">AISTATS 2023</a>, Valencia, Spain, April 25-27, 2023
 </p>
 
-
 <p>
 DistributedML Seminar, Virtual, Qualcomm AI Research, April 23, 2023 @ 9am PT
 </p>
-
 
 
 <!-- <p>
