update Ivan Ilin

--- a/i_team.html
+++ b/i_team.html
@@ -89,10 +89,6 @@
 
           <ul>
 
-            <li>Ivan Ilin (1/2023-present), KAUST
-              <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
-            </li>
-
             <li>Hanmin Li (1/2023-present), KAUST
               <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
@@ -141,10 +137,14 @@
 
 
 
-          <h2>MS Students </h2>
+          <h2>MS/PhD Students </h2>
 
                 <ul>
 
+            <li>Ivan Ilin (1/2023-present), KAUST
+              <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+            
                   <li><a href="https://cemse.kaust.edu.sa/people/person/rafal-szlendak">Rafal Szlendak</a> (8/2022-present), KAUST
                     <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
                   </li>
