--- a/i_team.html
+++ b/i_team.html
@@ -141,7 +141,7 @@
 
                 <ul>
 
-            <li>Ivan Ilin (1/2023-present), KAUST
+            <li><a href="https://ivan-ilin.netlify.app">Ivan Ilin</a> (1/2023-present), KAUST
               <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
             
