--- a/i_team.html
+++ b/i_team.html
@@ -93,7 +93,7 @@
               <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
-            <li><a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Abdurakhmon Sadiev</a> (9/2022-present), KAUST
+            <li><a href="https://sadiev.netlify.app">Abdurakhmon Sadiev</a> (9/2022-present), KAUST
               <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
@@ -457,7 +457,7 @@
             <li><a href="https://www.linkedin.com/in/kaja-gruntkowska-a240a924b/?trk=people_directory&originalSubdomain=pl">Kaja Gruntkowska</a> (6/2022-9/2022), from University of Warwick </li>
             <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (6/2022-1/2023), from Yerevan State University </li>
 
-            <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-7/2022), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
+            <li><a href="https://sadiev.netlify.app">Abdurakhmon Sadiev</a> (2/2022-7/2022), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
             <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-2/2022
               <a href="https://scholar.google.com/citations?hl=en&user=BFCHfngAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
