--- a/i_events.html
+++ b/i_events.html
@@ -52,6 +52,39 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+  <li><a href="https://icml.cc/Conferences/2023"><b>ICML 2023</b></a>, Honolulu, Hawaii, July 23-29, 2023
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
+  
+  <li><a href="https://iclr.cc/Conferences/2023"><b>ICLR 2023</b></a>,  Kigali, Rwanda, May 1-5, 2023,
+
+  <ul>
+    <li> Area Chair </li>
+  </ul>
+
+  </li>
+
+
+</ol>
+
+
+
+<h1> Past Events </h1>
+
+<ol reversed>
+
+   <li><a href="https://cemse.kaust.edu.sa/ai/aii-symp-2023"><b>Rising Stars in AI Symposium</b></a>, KAUST, Thuwal, Saudi Arabia, February 19-21, 2023
+
+  <ul>
+    <li> co-organizer </li>
+  </ul>
+
+  </li>
+
   <li><a href="https://nips.cc/Conferences/FutureMeetings"><b>NeurIPS 2022</b></a>, New Orleans, USA, November 26 - December 4, 2022
   <ul>
     <li> Area Chair </li>
@@ -69,7 +102,7 @@ Federated Learning Technologies for Mobile Edge Network - Research Track)</b></a
   </li>
 
 
-  <li><a href="https://icml.cc/"><b>ICML 2022</b></a>, Physical Coference, July 17-23, 2022
+  <li><a href="https://icml.cc/"><b>ICML 2022</b></a>, Physical Conference, July 17-23, 2022
 
   <ul>
     <li> Area Chair </li>
@@ -84,15 +117,17 @@ Federated Learning Technologies for Mobile Edge Network - Research Track)</b></a
   </ul>
 
   </li>
+  
+   <li><a href="https://cemse.kaust.edu.sa/ai/aii-symp-2022"><b>Rising Stars in AI Symposium</b></a>, KAUST, Thuwal, Saudi Arabia, March 13-15, 2022
 
+  <ul>
+    <li> co-organizer </li>
+  </ul>
 
-</ol>
+  </li>
 
-
-
-<h1> Past Events </h1>
-
-<ol reversed>
+  
+  
 
   <li> <a href="https://nips.cc/Conferences/2021"><b> NeurIPS 2021</b></a>, Virtual, December 6-14, 2021
 
