--- a/index.html
+++ b/index.html
@@ -102,16 +102,36 @@ In federated learning, a large number of users are involved in a global learning
 
 
 
-<h3>February 17, 2023</h3>
+<h3>February 1, 2023</h3>
 
-<h1>Mathematical Programming: 2022 Meritorious Service Award for Laurent Condat</h1>
+<h1>New Research Intern: Dinis Seward (Oxford)</h1>
 
-Laurent Condat --- a senior research scientist in my lab --- received the
-2022 Meritorious Service Award from the journal Mathematical Programming. 
-"The Meritorious Service Award was created to acknowledge these continued efforts. In 2022 our Editorial Board assessed the referees who have demonstrated exceptional diligence in their service to the journal." Mathematical Programming is the leading optimization journal. Congrats, Laurent!
-
-
+Dinis Douglas Guerreiro Seward just joined our team as a <a href="https://vsrp.kaust.edu.sa/">VSRP intern</a>. Dinis studies towards an MSc degree in Mathematical Modelling and Scientific Computing at the University of Oxford. Prior to this, he obtained a BSc degree in Applied Mathematics from Universidade de Lisboa, Portugal.
 <br>
+<br>
+
+Besides mathematics and optimization, Dinis is interested in graph theory, mathematical biology and artificial intelligence. Dinis' numerous accomplishments include:
+<ul>
+
+<li>St. Peter’s College Foundation Graduate Award, 2021 (Awarded to cover expenses during graduate studies)
+
+<li>Scholarship New Talents in Artificial Intelligence, Calouste Gulbenkian Foundation, 2019-2020 (10-month research scholarship awarded to 8 promising BSc students nationwide with research potential in the field of Artificial Intelligence.)</li>
+
+<li>IGC Summer School Scholarship, 2019</li>
+
+<li>Merit Diploma for outstanding academic performance, 2019 (Awarded for outstanding academic performance during the 2017-18 academic year)</li>
+
+<li>Erasmus+ Scholarship, 2018 (Awarded by the European Commission to students admitted into the Erasmus+ exchange programme)</li>
+
+<li>Scholarship New Talents in Mathematics, Calouste Gulbenkian Foundation, 2017-2018 (10-month research scholarship awarded to 20 promising BSc students nationwide pursuing degrees with strong mathematical background)</li>
+
+<li>FCIENCIAS.ID Award - Honourable Mention (Awarded to the best students in the first year of a BSc degree at Faculdade de Ciencias da Universidade de Lisboa)</li>
+
+<li>Academic Merit Scholarship (Scholarship covering a 1-year tuition fee. Awarded for outstanding academic performance during the 2016-17 academic year)</li>
+
+<li>Merit Diploma, 2018 (Awarded for outstanding academic performance during the 2016-17 academic year)</li>
+</ul>
+
 
 <br>
 <br>
@@ -365,6 +385,23 @@ Abstract:
 <i>
 In this work, we consider the problem of minimizing the sum of Moreau envelopes of given functions, which has previously appeared in the context of meta-learning and personalized federated learning. In contrast to the existing theory that requires running subsolvers until a certain precision is reached, we only assume that a finite number of gradient steps is taken at each iteration. As a special case, our theory allows us to show the convergence of First-Order Model-Agnostic Meta-Learning (FO-MAML) to the vicinity of a solution of Moreau objective. We also study a more general family of first-order algorithms that can be viewed as a generalization of FO-MAML. Our main theoretical achievement is a theoretical improvement upon the inexact SGD framework. In particular, our perturbed-iterate analysis allows for tighter guarantees that improve the dependency on the problem's conditioning. In contrast to the related work on meta-learning, ours does not require any assumptions on the Hessian smoothness, and can leverage smoothness and convexity of the reformulation based on Moreau envelopes. Furthermore, to fill the gaps in the comparison of FO-MAML to the Implicit MAML (iMAML), we show that the objective of iMAML is neither smooth nor convex, implying that it has no convergence guarantees based on the existing theory.
 </i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>January 6, 2023</h3>
+
+<h1>Paper Accepted to TMLR</h1>
+
+The paper <a href="https://arxiv.org/abs/2002.03329">Better Theory for SGD in the Nonconvex World</a>, joint work with <a href="https://rka97.github.io">Ahmed Khaled</a>, was accepted to <a href="https://openreview.net/forum?id=AU4qHN2VkS&referrer=%5BTMLR%5D(%2Fgroup%3Fid%3DTMLR)">TMLR</a>. I have taught the key result from this paper in my CS331 (Stochastic Gradient Descent Methods) course at KAUST for a couple years already!
+
 <br>
 
 
