--- a/i_talks.html
+++ b/i_talks.html
@@ -17,9 +17,6 @@
     </script>
 
 
-
-
-
   </head>
   <body>
     <div id="page">
@@ -61,7 +58,11 @@ The 14th International Conference of Numerical Optimization and Numerical Linear
 </p>
 
 <p>
-<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Kosice, Slovakia, July 9-16, 2023
+Open Problems in Federated Learning Workshop, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited)
+</p>
+
+<p>
+<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Kosice, Slovakia, July 9-16, 2023 (lecturer)
 </p>
 
 <p>
@@ -72,13 +73,12 @@ The 14th International Conference of Numerical Optimization and Numerical Linear
 <a href="https://iclr.cc/Conferences/2023">ICLR 2023</a>, Kigali, Rwanda, May 1-5, 2023
 </p>
 
+<!--
 <p>
 <a href="http://aistats.org/aistats2023/">AISTATS 2023</a>, Valencia, Spain, April 25-27, 2023
 </p>
+!-->
 
-<p>
-DistributedML Seminar, Virtual, Qualcomm AI Research, April 23, 2023 @ 9am PT
-</p>
 
 
 <!-- <p>
@@ -87,6 +87,11 @@ DistributedML Seminar, Virtual, Qualcomm AI Research, April 23, 2023 @ 9am PT
 !-->
 
 <h1>2023 Talks</h1>
+
+<p>
+[223]
+DistributedML Seminar, Virtual, Qualcomm AI Research, April 23, 2023 @ 9am PT
+</p>
 
 <p>
 [222]
