--- a/i_talks.html
+++ b/i_talks.html
@@ -50,7 +50,7 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
-The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA), Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
+<a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
 </p>
 
 <p>
