--- a/i_papers.html
+++ b/i_papers.html
@@ -151,7 +151,7 @@
           <a href="https://openreview.net/forum?id=cB4N3G5udUS">11th International Conference on Learning Representations (ICLR 2023) </a><br>
           OPT2022: 14th Annual Workshop on Optimization for Machine Learning (NeurIPS 2022 Workshop)<br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2207.12891">arXiv</a>] [code: RandProx, RandProx-FB, RandProx-LC, RandProx-CP, RandProx-ADMM, RandProx-DY] <br>
+          [<a href="https://arxiv.org/abs/2207.12891">arXiv</a>] [<a href="posters/Poster-RandProx.pdf">poster</a>] [<a href="https://recorder-v3.slideslive.com/?share=79696&s=147bb940-c592-4a11-a8c1-9c123ea281ec">video</a>] [code: RandProx, RandProx-FB, RandProx-LC, RandProx-CP, RandProx-ADMM, RandProx-DY] <br>
           <br>
 
           [201] Grigory Malinovsky, Kai Yi and Peter Richtárik <br>
