--- a/i_papers.html
+++ b/i_papers.html
@@ -216,7 +216,7 @@
           <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
           <a href="https://openreview.net/forum?id=pfuqQQCB34">11th International Conference on Learning Representations (ICLR 2023) </a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [code: Byz-VR-MARINA] <br>
+          [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [<a href="posters/Poster-ICLR2023_Byz_VR_MARINA.pdf">poster</a>] [code: Byz-VR-MARINA] <br>
           <br>
 
           [191] Lukang Sun, Avetik Karagulyan and Peter Richtárik<br>
@@ -1396,9 +1396,8 @@ href="https://github.com/gingsmith/cocoa">CoCoA+</a>]<br>
 Fercoq<br>
 <b>SDNA: Stochastic dual Newton ascent for empirical risk
 minimization</b><br>
-<a href="http://jmlr.org/proceedings/papers/v48/qub16.html">Proceedings
-of the 33rd International Conference on Machine Learning, </a><a
-href="http://jmlr.org/proceedings/papers/v48/qub16.html">PMLR 48:1823-1832, 2016</a><br>
+<a href="https://proceedings.mlr.press/v48/qub16.html">Proceedings
+of the 33rd International Conference on Machine Learning, PMLR 48:1823-1832, 2016</a><br>
 [<a href="http://arxiv.org/abs/1502.02268">arXiv</a>] [<a
 href="bib/33.bib">bib</a>] [<a
 href="talks/TALK-SDNA-ISMP2015.pdf">slides</a>] [<a
