--- a/i_talks.html
+++ b/i_talks.html
@@ -58,7 +58,7 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
-Open Problems in Federated Learning Workshop, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited)
+Federated Learning Planning Workshop, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited by John Duchi, Nika Haghtalab, Peter Kairouz, Virginia Smith, Nati Srerbo, and Kunal Talwar)
 </p>
 
 <p>
@@ -66,12 +66,14 @@ Open Problems in Federated Learning Workshop, Simons Institute, Berkeley, USA, J
 </p>
 
 <p>
-<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a>, Armenia, July 2-8, 2023 (plenary)
+<a href="http://mathconf.sci.am/">Mathematics in Armenia: Advances and Perspectives</a> (80th anniversary of the foundation of the Armenian National Academy of Sciences), Yerevan, Armenia, July 2-8, 2023 (plenary)
 </p>
 
 <p>
-<a href="https://iclr.cc/Conferences/2023">ICLR 2023</a>, Kigali, Rwanda, May 1-5, 2023
+Research Seminar, Institute for Informatics, Slovak Academy of Sciences, Bratislava, Slovakia, May 26, 2023 
 </p>
+
+
 
 <!--
 <p>
@@ -87,6 +89,26 @@ Open Problems in Federated Learning Workshop, Simons Institute, Berkeley, USA, J
 !-->
 
 <h1>2023 Talks</h1>
+
+<p>
+[227]
+Research Seminar, Apple Federated Learning Team, Virtual Seminar Series, May 23, 2023 (invited by Vojta Jina) [<a href="talks/TALK-2023-05-23-Apple.pdf">slides</a>]
+</p>
+
+<p>
+[226]
+Research Seminar, Institute for Informatics, Slovak Academy of Sciences, Bratislava, Slovakia, May 19, 2023 
+</p>
+
+<p>
+[225]
+Research Seminar, Kempelen Institute of Intelligent Technologies (KInIT), Bratislava, Slovakia, May 15, 2023 
+</p>
+
+<p>
+[224]
+<a href="https://iclr.cc/Conferences/2023">ICLR 2023</a>, Kigali, Rwanda, May 1-5, 2023
+</p>
 
 <p>
 [223]
@@ -134,7 +156,7 @@ MBZUAI Workshop on Collaborative Learning: From Theory to Practice, Abu Dhabi, O
 
 <p>
 [215]
-<a href="https://www.oneworldml.org/home">One World Seminar Series on the Mathematics of Machine Learning</a>, virtual, October 5, 2022 (invited)
+<a href="https://www.oneworldml.org/home">One World Seminar Series on the Mathematics of Machine Learning</a>, Virtual Seminar Series, October 5, 2022 (invited)
 </p>
 
 <p>
@@ -187,7 +209,7 @@ PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="ht
 </p>
 
 <p>
-[204] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual seminar, May 4, 2022
+[204] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW)</a>, Virtual Seminar Series, May 4, 2022
 </p>
 
 <p>
@@ -195,7 +217,7 @@ PhD Course "Introduction to Stochastic Gradient Descent" (22.5 hrs), <a href="ht
 </p>
 
 <p>
-[202] Seminar Series in Cognitive Computing at Baidu Research, virtual, April 26, 2022 @ 10pm PT = April 27, 2022 @ 7am CET;
+[202] Seminar Series in Cognitive Computing at Baidu Research, Virtual Seminar Series, April 26, 2022 @ 10pm PT = April 27, 2022 @ 7am CET;
 Previous speakers: <a href="https://www.youtube.com/watch?v=BjCwYDl8UB4&t=9s">Larry Carin</a>,
 <a href="https://www.youtube.com/watch?v=6x_vIJRHglY&t=930s">Pascal Fua</a>,
 <a href="https://www.youtube.com/watch?v=DokLw1tILlw&t=456s">Yann LeCun</a> (<a href="https://www.youtube.com/watch?v=Qgh2IU_fRMs&t=2118s">Q&A</a>),
