--- a/i_team.html
+++ b/i_team.html
@@ -163,6 +163,9 @@
 <!--    <li><a href="">Babis Kostopoulos</a> (5/2023-present), from National Technical University of Athens </li>          
 -->
 
+            
+            <li><a href="https://www.linkedin.com/in/ahmad-rammal-494662207/?originalSubdomain=fr">Ahmad Rammal</a> (3/2022-8/2023), from École Polytechnique </li>
+
             <li><a href="">Dinis Seward</a> (1/2023-present), from Oxford University </li>
             
             <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (8/2022-2/2023), from ShanghaiTech University </li>
