--- a/index.html
+++ b/index.html
@@ -48,16 +48,15 @@
 
 <h1>Talk @ Apple</h1>
 
-Today I am giving a talk at Apple, targeting their Federated Learning team. My talk title: 
-"On 5th Generation of Local Training Methods in Federated Learning". 
+Today I am giving a talk at Apple, targeting their Federated Learning team. My talk title:  "On 5th Generation of Local Training Methods in Federated Learning". 
 
 <br>
 
 <br>
-<a href="file:///Users/richtap/git/PeterRichtarik.github.io/talks/TALK-2023-05-23-Apple.pdf"><img alt="My talk." src="imgs/2023-05-23-Apple.png" width="720"></a>
+<a href="talks/TALK-2023-05-23-Apple.pdf"><img alt="My talk." src="imgs/2023-05-23-Apple.png" width="720"></a>
 <br>
 
-<a href="file:///Users/richtap/git/PeterRichtarik.github.io/talks/TALK-2023-05-23-Apple.pdf">Here are the slides.</a>
+<a href="talks/TALK-2023-05-23-Apple.pdf">Here are the slides.</a>
 <br>
 
 <br>
