--- a/index.html
+++ b/index.html
@@ -44,6 +44,102 @@
         <div id="content">
 
 
+
+
+
+
+
+<h3>May 26, 2023</h3>
+
+<h1>Talk @ Slovak Academy of Sciences</h1>
+
+After a week, I am visiting the Institute of Informatics of the Slovak Academy of Sciences again. They seem to be very interested in Federated Learning.<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+<h3>May 25, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2305.16296">
+"A Guide Through the Zoo of Biased SGD"</a> -
+joint work with
+ <a href="https://combgeo.org/en/members/yury-demidovich/">Yury Demidovich</a>, <a href="https://grigory-malinovsky.github.io/">Grigory Malinovsky</a> and <a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a>.
+ 
+<br>
+<br>
+<center>
+<a href="https://arxiv.org/abs/2305.16296">
+<img alt="A Guide Through the Zoo of Biased SGD" src="imgs/BiasedSGD.png" width="500">
+</a>
+</center>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>May 24, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2305.15264">
+"Error Feedback Shines when Features are Rare"</a> -
+joint work with
+ <a href="https://elnurgasanov.com">Elnur Gasanov</a> and <a href="https://burlachenkok.github.io">Konstantin Burlachenko</a>.
+ 
+<br>
+<br>
+<center>
+<a href="https://arxiv.org/abs/2305.15264">
+<img alt="Error Feedback Shines when Features are Rare" src="imgs/EF21-sparse.png" width="500">
+</a>
+</center>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>May 24, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2305.15155">
+"Momentum Provably Improves Error Feedback!"</a> -
+joint work with
+ <a href="https://ai.ethz.ch/about-us/people/ilyas-fatkhullin.html">Ilyas Fatkhullin</a> and <a href="https://k3nfalt.github.io/">Alexander Tyurin</a>.
+ 
+<br>
+<br>
+<center>
+<a href="https://arxiv.org/abs/2305.15155">
+<img alt="Momentum Provably Improves Error Feedback!" src="imgs/EF21-SGDM.png" width="500">
+</a>
+</center>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>May 23, 2023</h3>
 
 <h1>Talk @ Apple</h1>
@@ -78,9 +174,12 @@ joint work with
  <a href="https://kaiyi.me">Kai Yi</a> and <a href="https://lcondat.github.io">Laurent Condat</a>.
  
 <br>
+<br>
+<center>
 <a href="https://arxiv.org/abs/2305.13170">
-<img alt="Explicit Personalization and Local Training: Double Communication Acceleration in Federated Learning" src="imgs/Scafflix.png" width="720">
+<img alt="Explicit Personalization and Local Training: Double Communication Acceleration in Federated Learning" src="imgs/Scafflix.png" width="500">
 </a>
+</center>
 <br>
 
 <br>
@@ -102,9 +201,12 @@ joint work with
  <a href="https://k3nfalt.github.io">Alexander Tyurin</a>.
  
 <br>
+<br>
+<center>
 <a href="https://arxiv.org/abs/2305.12387">
-<img alt="Optimal Time Complexities of Parallel Stochastic Optimization Methods Under a Fixed Computation Model" src="imgs/RennalaSGD.png" width="720">
+<img alt="Optimal Time Complexities of Parallel Stochastic Optimization Methods Under a Fixed Computation Model" src="imgs/RennalaSGD.png" width="500">
 </a>
+</center>
 <br>
 
 <br>
@@ -125,9 +227,12 @@ joint work with
  <a href="https://k3nfalt.github.io">Alexander Tyurin</a>.
 
 <br>
+<br>
+<center>
 <a href="https://arxiv.org/abs/2305.12379">
-<img alt="2Direction: Theoretically Faster Distributed Training with Bidirectional Communication Compression" src="imgs/2Direction.png" width="720">
+<img alt="2Direction: Theoretically Faster Distributed Training with Bidirectional Communication Compression" src="imgs/2Direction.png" width="500">
 </a>
+</center>
 <br>
 
 <br>
@@ -149,16 +254,11 @@ Hanmin Li and <a href="https://avetx.github.io">Avetik Karagulyan</a>.
 
 <br>
 <br>
-Abstract:
-<i>
-This paper introduces a new method for minimizing matrix-smooth non-convex objectives through the use of novel Compressed Gradient Descent (CGD) algorithms enhanced with a matrix-valued stepsize. The proposed algorithms are theoretically analyzed first in the single-node and subsequently in the distributed settings. Our theoretical results reveal that the matrix stepsize in CGD can capture the objective's structure and lead to faster convergence compared to a scalar stepsize. As a byproduct of our general results, we emphasize the importance of selecting the compression mechanism and the matrix stepsize in a layer-wise manner, taking advantage of model structure. Moreover, we provide theoretical guarantees for free compression, by designing specific layer-wise compressors for the non-convex matrix smooth objectives. Our findings are supported with empirical evidence.
-</i>
-<br>
-
-<br>
+<center>
 <a href="https://arxiv.org/abs/2305.12568">
-<img alt="Det-CGD: Compressed Gradient Descent with Matrix Stepsizes for Non-Convex Optimization" src="imgs/Det-CGD.png" width="720">
+<img alt="Det-CGD: Compressed Gradient Descent with Matrix Stepsizes for Non-Convex Optimization" src="imgs/Det-CGD.png" width="500">
 </a>
+</center>
 <br>
 
 
