--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,16 @@
 
           <h1> Prepared in 2023 </h1>
 
+          [227] Sarit Khirirat, Eduard Gorbunov, Samuel Horváth, Rustem Islamov, Fakhri Karray, and Peter Richtárik<br>
+          <b>Clip21: Error feedback for gradient clipping</b><br>
+          [<a href="https://arxiv.org/abs/2305.18929">arXiv</a>] [code: Clip21-Avg, Clip21-GD, DP-Clip21-GD, Press-Clip21-GD] <br>
+          <br>  
+          
+          [226] Jihao Xin, Marco Canini, Peter Richtárik, and Samuel Horváth<br>
+          <b>Global-QSGD: Practical floatless quantization for distributed learning with theoretical guarantees</b><br>
+          [<a href="https://arxiv.org/abs/2305.18627">arXiv</a>] [code: Global-QSGD] <br>
+          <br>  
+          
           [225] Yury Demidovich, Grigory Malinovsky, Igor Sokolov and Peter Richtárik<br>
           <b>A guide through the zoo of biased SGD</b><br>
           [<a href="https://arxiv.org/abs/2305.16296">arXiv</a>] [code: BiasedSGD] <br>
@@ -422,7 +432,7 @@
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
           <a href="https://openreview.net/forum?id=8ygF02Zm51q">Advances in Neural Information Processing Systems 34 (NeurIPS 2021)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [code: EF21, EF21+] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>]<br>
+          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [<a href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=76739">62 min video</a>] [code: EF21, EF21+] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>]<br>
           <br>
 
           [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
