--- a/index.html
+++ b/index.html
@@ -44,8 +44,62 @@
         <div id="content">
 
 
+<h3>May 25, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2305.18627">
+"Global-QSGD: Practical Floatless Quantization for Distributed Learning with Theoretical Guarantees"</a> -
+joint work with
+ <a href="https://jihaoxin.github.io">Jihao Xin</a>, <a href="https://mcanini.github.io">Marco Canini</a> and <a href="https://sites.google.com/view/samuelhorvath">Samuel Horváth</a>.
+ 
+ <br>
+  <br>
+ 
+ We found out how to make gradient quantization all-reduce friendly.
+ 
+<br>
+<br>
+<center>
+<a href="https://arxiv.org/abs/2305.18627">
+<img alt="Global-QSGD: Practical Floatless Quantization for Distributed Learning with Theoretical Guarantees" src="imgs/Global-QSGD.png" width="500">
+</a>
+</center>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
+
+<h3>May 31, 2023</h3>
+
+<h1>Teaching @ Aramco</h1>
+
+On my way to <a href="https://www.google.com/maps/place/Dammam/@26.3622887,48.7235797,8z/data=!4m6!3m5!1s0x3e361d32276b3403:0xefd901ec7a5e5676!8m2!3d26.4206828!4d50.0887943!16zL20vMDJmZ3Z6?entry=ttu">Dammam!</a> I am teaching an "Introduction to Machine Learning" course within an MS in Data Science program offered by KAUST to selected employees of Saudi Aramco. My TAs: Alexander Tyurin and Rafal Szlendak. Four days of teaching in a row, starting tomorrow. Some break. And then again, four more days. Will be fun. Will be tiring.<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>May 28, 2023</h3>
+
+<h1>Back @ KAUST</h1>
+
+I am back at KAUST now. Biggest news: I have a new glass whiteboard in my office covering an entire wall. Awesome! <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
