--- a/i_talks.html
+++ b/i_talks.html
@@ -50,6 +50,10 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+<a href="https://nips.cc/Conferences/2023">NeurIPS 2023</a> Workshop on Federated Learning in the Age of Foundation Models (subject to the workshop being accepted), New Orleans, Louisiana, USA, December 15-16, 2023 (plenary talk)
+</p>
+
+<p>
 <a href=verb"http://lsec.cc.ac.cn/~icnonla23/index.html">The 14th International Conference of Numerical Optimization and Numerical Linear Algebra (ICNONLA)</a>, Taiyuan, Shanxi Province, China, August 15-18, 2023 (plenary talk; invited by Ya-xiang Yuan). 
 </p>
 
