--- a/index.html
+++ b/index.html
@@ -44,7 +44,72 @@
         <div id="content">
 
 
-<h3>May 25, 2023</h3>
+
+
+
+
+
+<h3>June 4, 2023</h3>
+
+<h1>Aramco course halftime</h1>
+
+After full 4 days of teaching (June 1-4), I have week plus to prepare for further and final 4 days. This is an intensive 48 hours long course delivered over 8 days. <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>May 31, 2023</h3>
+
+<h1>Teaching @ Aramco</h1>
+
+On my way to <a href="https://www.google.com/maps/place/Dammam/@26.3622887,48.7235797,8z/data=!4m6!3m5!1s0x3e361d32276b3403:0xefd901ec7a5e5676!8m2!3d26.4206828!4d50.0887943!16zL20vMDJmZ3Z6?entry=ttu">Dammam!</a> I am teaching an "Introduction to Machine Learning" course within an MS in Data Science program offered by KAUST to selected employees of Saudi Aramco. My TAs: Alexander Tyurin and Rafal Szlendak. Four days of teaching in a row, starting tomorrow. Some break. And then again, four more days. Will be fun. Will be tiring.<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+<h3>May 30, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2305.18929">
+"Clip21: Error Feedback for Gradient Clipping"</a> -
+joint work with
+ <a href="https://richtarik.org/i_team.html">Sarit Khirirat</a>, 
+ <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>, 
+ <a href="https://sites.google.com/view/samuelhorvath">Samuel Horváth</a>,
+  <a href="https://rustem-islamov.github.io">Rustem Islamov</a>,
+  and
+ <a href="https://uwaterloo.ca/scholar/karray">Fakhri Karray</a>.
+ <br>
+  <br>
+ 
+ We found out how to correct for the error caused by gradient clipping.
+ 
+<br>
+<br>
+<center>
+<a href="https://arxiv.org/abs/2305.18929">
+<img alt="Clip21: Error Feedback for Gradient Clipping" src="imgs/Clip21.png" width="500">
+</a>
+</center>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>May 29, 2023</h3>
 
 <h1>New Paper</h1>
 
@@ -67,20 +132,6 @@ joint work with
 </a>
 </center>
 <br>
-
-<br>
-<br>
-<img alt="" src="imgs/fancy-line.png" width="196" height="36">
-<br>
-<br>
-
-
-
-<h3>May 31, 2023</h3>
-
-<h1>Teaching @ Aramco</h1>
-
-On my way to <a href="https://www.google.com/maps/place/Dammam/@26.3622887,48.7235797,8z/data=!4m6!3m5!1s0x3e361d32276b3403:0xefd901ec7a5e5676!8m2!3d26.4206828!4d50.0887943!16zL20vMDJmZ3Z6?entry=ttu">Dammam!</a> I am teaching an "Introduction to Machine Learning" course within an MS in Data Science program offered by KAUST to selected employees of Saudi Aramco. My TAs: Alexander Tyurin and Rafal Szlendak. Four days of teaching in a row, starting tomorrow. Some break. And then again, four more days. Will be fun. Will be tiring.<br>
 
 <br>
 <br>
