--- a/index.html
+++ b/index.html
@@ -45,7 +45,35 @@
 
 
 
+<h3>June 5, 2023</h3>
 
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2306.03240">
+"Improving Accelerated Federated Learning with Compression and Importance Sampling"</a> -
+joint work with
+ <a href="https://scholar.google.com/citations?user=vN2ALVYAAAAJ&hl=en">Michał Grudzień</a>, and
+ <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a>.
+ <br>
+  <br>
+ 
+ We found out how to combine local training, client sampling and communication compression correctly in a single method.
+ 
+<br>
+<br>
+<center>
+<a href="https://arxiv.org/abs/2306.03240">
+<img alt="Improving Accelerated Federated Learning with Compression and Importance Sampling" src="imgs/5GCS-CC.png" width="500">
+</a>
+</center>
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
