--- a/i_team.html
+++ b/i_team.html
@@ -160,7 +160,7 @@
 <!--    <li><a href="">Marta Pozzi</a> (9/2023-present), from University of Pavia </li>          
 -->
           
-	    <li><a href="">Babis Kostopoulos</a> (6/2023-9/2023), from National Technical University of Athens </li>          
+	    <li><a href="https://www.linkedin.com/in/babis-kostopoulos/">Babis Kostopoulos</a> (6/2023-9/2023), from National Technical University of Athens </li>          
             
             <li><a href="https://www.linkedin.com/in/ahmad-rammal-494662207/?originalSubdomain=fr">Ahmad Rammal</a> (3/2022-8/2023), from École Polytechnique </li>
 
