TMLR adaptive compress

--- a/i_papers.html
+++ b/i_papers.html
@@ -158,6 +158,7 @@
 
           [211] Maksim Makarenko, Elnur Gasanov, Rustem Islamov, Abdurakhmon Sadiev and Peter Richtárik<br>
           <b>Adaptive compression for communication-efficient distributed training</b><br>
+          <a href="https://openreview.net/pdf?id=Rb6VDOHebB">Transactions on Machine Learning Research (TMLR 2023) </a><br>          
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2211.00188">arXiv</a>] [code: AdaCGD] <br>
           <br>
@@ -307,7 +308,7 @@
 
           [187] Samuel Horváth, Maziar Sanjabi, Lin Xiao, Peter Richtárik and Michael Rabbat<br>
           <b>FedShuffle: Recipes for better use of local work in federated learning</b><br>
-          <a href="https://openreview.net/pdf?id=Lgs5pQ1v30">Transactions on Machine Learning Research (TMLR), 09/2022</a> <br>
+          <a href="https://openreview.net/pdf?id=Lgs5pQ1v30">Transactions on Machine Learning Research (TMLR 2022)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2204.13169">arXiv</a>] [code: FedShuffle] <br>
           <br>
@@ -499,7 +500,7 @@
 
           [158] Zhen Shi, Nicolas Loizou, Peter Richtárik and Martin Takáč<br>
           <b>AI-SARAH: Adaptive and implicit stochastic recursive gradient methods</b><br>
-          <a href="https://openreview.net/forum?id=WoXJFsJ6Zw">Transactions on Machine Learning Research (TMLR), 2023</a> <br>
+          <a href="https://openreview.net/forum?id=WoXJFsJ6Zw">Transactions on Machine Learning Research (TMLR 2023)</a> <br>
           [<a href="https://arxiv.org/abs/2102.09700">arXiv</a>] [code: AI-SARAH] <br>
           <br>
 
@@ -589,7 +590,7 @@
 
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
           <b>Optimal client sampling for federated learning</b><br>
-          <a href="https://openreview.net/pdf?id=8GvRCWKHIL">Transactions on Machine Learning Research (TMLR), 2022</a> <br>
+          <a href="https://openreview.net/pdf?id=8GvRCWKHIL">Transactions on Machine Learning Research (TMLR 2022)</a> <br>
           <a href="https://ppml-workshop.github.io/#papers">Privacy Preserving Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.13723">arXiv</a>] [code: OCS, AOCS]  <br>
@@ -771,7 +772,7 @@
 
           [119] Ahmed Khaled and Peter Richtárik<br>
           <b>Better theory for SGD in the nonconvex world</b><br>
-          <a href="https://openreview.net/pdf?id=AU4qHN2VkS">Transactions on Machine Learning Research (TMLR), 2022</a> <br>
+          <a href="https://openreview.net/pdf?id=AU4qHN2VkS">Transactions on Machine Learning Research (TMLR 2022)</a> <br>
           [<a href="https://arxiv.org/abs/2002.03329">arXiv</a>]<br>
           <br>
 
