--- a/i_talks.html
+++ b/i_talks.html
@@ -62,7 +62,7 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
-Federated Learning Planning Workshop, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited by John Duchi, Nika Haghtalab, Peter Kairouz, Virginia Smith, Nati Srerbo, and Kunal Talwar)
+<a href="https://simons.berkeley.edu/workshops/federated-collaborative-learning/schedule">Federated and Collaborative Learning Workshop</a>, Simons Institute, Berkeley, USA, July 19-20, 2023 (invited by John Duchi, Nika Haghtalab, Peter Kairouz, Virginia Smith, Nati Srebro, and Kunal Talwar)
 </p>
 
 <p>
