--- a/i_papers.html
+++ b/i_papers.html
@@ -86,7 +86,7 @@
           [223] Ilyas Fatkhullin, Alexander Tyurin and Peter Richtárik<br>
           <b>Momentum provably improves error feedback!</b><br>
           <span class="important">Federated Learning Paper</span><br>            
-          [<a href="https://arxiv.org/abs/2305.15155">arXiv</a>] [code: EF21-SGDM-ideal, EF21-SGDM, EF21-SGD2M] <br>
+          [<a href="https://arxiv.org/abs/2305.15155">arXiv</a>] [code: EF21-SGDM-ideal, EF21-SGDM, EF21-SGD2M] [<a href="posters/Poster-EF21-SGDM.pdf">poster</a>] <br>
           <br>  
                     
           [222] Kai Yi, Laurent Condat and Peter Richtárik<br>
